# copier-numpy

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  copier.yml  extensions.py  pyproject.toml  setup_github.py
.github/: protect-main.json  protect-vtag.json
.github/workflows/: deploy.yml
template/: .pre-commit-config.yaml.jinja  README.md.jinja  _copier_cli.py  dev.py.jinja  pdm.toml  pyproject.toml.jinja  {% if include_cicd %}.pre-commit-config.yaml{% endif %}  {% if include_docs %}mkdocs.yml.jinja{% endif %}  {% if include_docs %}mkdocs.yml{% endif %}.jinja  {% if init_github %}.pre-commit-config.yaml{% endif %}.jinja  {% if init_github %}_pre_commit_checks.py{% endif %}.jinja  {% if is_distributable %}CHANGELOG.md{% endif %}  {% if is_distributable %}CONTRIBUTING.md{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/{% if include_cicd %}.github{% endif %}/workflows/: {% if include_docs %}docs.yml{% endif %}  {% if include_docs %}docs.yml{% endif %}.jinja  {% if is_distributable %}deploy.yml.jinja{% endif %}  {% if is_distributable %}deploy.yml{% endif %}.jinja  {% if is_distributable %}tests.yml{% endif %}  {% if is_distributable %}tests.yml{% endif %}.jinja
template/{% if include_docs %}docs{% endif %}/: features.md.jinja  gen_ref_pages.py.jinja  how-to-guides.md.jinja  start.md  tutorials.md.jinja
template/{% if is_distributable %}src{% endif %}/{{ import_name }}/: __init__.py.jinja
template/{% if is_distributable %}src{% endif %}/{{ import_name }}/subpackage/: __init__.py.jinja
template/{% if is_distributable %}tests{% endif %}/: conftest.py  test_examples.py.jinja
