[project]
name = "copier-numpy"
version = "0.3.3"
description = "Template for a numpy-based scientific computing Python package."
authors = [
    {name = "Joshua Eckels", email = "eckelsjd@umich.edu"},
]
dependencies = [
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"
annotated_tag = true
post_bump_hooks = ["git push --follow-tags"]

[tool.pdm]
distribution = false

[tool.pdm.install]
cache = true

[tool.pdm.scripts]
bump = "cz bump {args}"

[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=3.29.0",
    "pre-commit>=3.8.0",
    "copier>=9.3.1",
    "copier-templates-extensions>=0.3.0"
]
